--- a/views/templates/login.html.twig
+++ b/views/templates/login.html.twig
@@ -91,6 +91,7 @@ Connectez-vous à Miaou pour accéder aux jeux éducatifs, histoires et coloriag
                             value="123456789Abc&"
                             {% endif %}
                         >
+           
                         {# Bouton toggle visibilité mot de passe #}
                         <button 
                             type="button"
@@ -146,6 +147,8 @@ Connectez-vous à Miaou pour accéder aux jeux éducatifs, histoires et coloriag
                 </div>
             </form>
         </article>
+        <div class="forgotten-pawword">
+            <p> Mot de passe oublié ? - <a href="?route=forgottenPassword">Cliquez ici</p>
     </section>
 </main>
 
