--- a/views/templates/register.html.twig
+++ b/views/templates/register.html.twig
@@ -108,7 +108,7 @@
                                                                                 >
                                                                                 <label for="avatar-{{ avatar.id }}">
                                                                                 <img 
-                                                                                        src="{{ avatar.urlMini }}"
+                                                                                        src="{{ asset(avatar.urlMini) }}"
                                                                                         alt="{{ avatar.description }}"
                                                                                 >
                                                                                 </label>
@@ -157,7 +157,6 @@
                                          </form>       
 
                                 </article>
-                        
                 </section>
 
 
