--- a/views/templates/subpages/_footer.html.twig
+++ b/views/templates/subpages/_footer.html.twig
@@ -57,7 +57,7 @@
                                 <li><a href="?route=stories">Histoires</a></li>
                             {% endif %}
 
-                            {% if titre != 'Profil' %}
+                            {% if titre != 'Profile' %}
                                 <li><a href="?route=profile">Profil</a></li>
                             {% endif %}
                             {% if titre != 'Notre Philosophie' %}
@@ -91,6 +91,9 @@
                         </li>
                         <li>
                             <a href="">Mentions légales</a>
+                        </li>
+                        <li>
+                            <a href="?route=newsletterSubscribe">Abonnez-vous à notre Newsletter</a>
                         </li>
                     </ul>
                 </div>
