--- a/views/templates/subpages/_header.html.twig
+++ b/views/templates/subpages/_header.html.twig
@@ -4,6 +4,8 @@
         <div class="header-left">
             {# Avatar #}
             <figure class="avatar-container">
+
+            
                 {% if user is not defined or not user %}
                     {# Utilisateur non connecté #}
                     <img class="avatar" src="assets/img/avatars/chatFiligranne.svg" alt="Logo Miaou, mascotte du site">
@@ -12,7 +14,7 @@
                     <img class="avatar" src="assets/img/avatars/admin.svg" alt="Logo Miaou, mascotte du site">
                 {% else %}
                     {# Utilisateur connecté #}
-                    <img class="avatar" src="{{ avatar.url }}" alt="{{ avatar.description }}">
+                    <img class="avatar" src="{{ avatar.urlMini }}" alt="{{ avatar.description }}">
 
                 {% endif %}
             </figure>
