--- a/public/assets/styles/sass/pages/dashboard.scss
+++ b/public/assets/styles/sass/pages/dashboard.scss
@@ -1,48 +1,28 @@
 @use "../abstracts/varcolors";
 @use "../abstracts/mixins";
 
-body {
 
-    padding-top :18vh;
 
-    @include mixins.breakpoint(small) {
-        padding-top : 20vh;
-    }
+.dashbord {
 
-    @include mixins.breakpoint(medium) {
-        padding-top : 21vh;
-    }
-
-    @include mixins.breakpoint(mediumLarge) {
-        margin-top : 40vh;
-        padding-top : 10vh;
-    }
-
-    @include mixins.breakpoint(large) {
-        margin-top : 15vh;
-    }
 }
 
 #dashboard {
     @include mixins.breakpoint(small) {
-        padding-top : 20vh;
+        padding-top : 10vh;
     }
 
     @include mixins.breakpoint(medium) {
-        padding-top : 21vh;
+        padding-top : 11vh;
     }
 
     @include mixins.breakpoint(mediumLarge) {
-        margin-top : 40vh;
+        margin-top : 20vh;
         padding-top : 10vh;
     }
 
     @include mixins.breakpoint(large) {
         margin-top : 15vh;
-    }
-
-    table {
-        margin-top: 5vh;
     }
 
 }
