--- a/views/templates/homepage.html.twig
+++ b/views/templates/homepage.html.twig
@@ -3,56 +3,48 @@
 {% block title %}
       Miaou |Page Accueil 
 {% endblock %}
-
-
-
 {% block body %}
 
         {% block header %}
             {{ parent() }}
         {% endblock %}
 
+        {% block content %}
         
-    
-    {% block content %}
-    
-    {% block error %}
-    {% endblock %}
-       <section id="homepage" class="homepage-content">
-        <header class="homepage-header">
-            <h1 class="sr-only">Page Accueil</h1>
-            <p class="subtitle">Bonjour et Bienvenue sur le site Apprendre avec Miaou !</p>
-            <p class="description">Le site de jeux et activités pour les enfants de 3/5 ans</p>
-        </header>
-        
-        <article class="auth">
-            <h2 class="sr-only">Connexion et inscription</h2>
-            
-            <figure class="auth-images" aria-hidden="true">
-                <a href="?route=login" aria-label="Se connecter">
-                    <img src="assets/img/Miaou/CadenasCoeur.svg" alt="Cadenas en forme de cœur">
-                </a>
-                <a href="?route=login" aria-label="Se connecter">
-                    <img src="assets/img/Miaou/ClefCoeur.svg" alt="Clef en forme de cœur">
-                </a>
-            </figure>
-            
-            <div class="auth-text">
-                <p>Vous devez vous connecter pour accéder aux jeux et activités</p>
-                <p>
-                    Vous n'avez pas encore de compte ?
-                    <a href="?route=register">Inscrivez-vous ici</a>
-                </p>
-            </div>
-        </article>
-    </section>
-
-
-    
-    {% endblock %}
-
-   
-
-    
+        {% block error %}
+        {% endblock %}
+            <section id="homepage" class="homepage-content">
+                <h2 class=sr-only>Accueil</h2>
+                    <header class="homepage-header">
+                        <h1 class="sr-only">Page Accueil</h1>
+                        <p class="subtitle">Bonjour et Bienvenue sur le site Apprendre avec Miaou !</p>
+                        <p class="description">Le site de jeux et activités pour les enfants de 3/5 ans</p>
+                    </header>
+                    
+                    <article class="auth">
+                        <h2 class="sr-only">Connexion et inscription</h2>
+                        
+                        <figure class="auth-images" aria-hidden="true">
+                            <a href="?route=login" aria-label="Se connecter">
+                                <img src="assets/img/Miaou/CadenasCoeur.svg" alt="Cadenas en forme de cœur">
+                            </a>
+                            <a href="?route=login" aria-label="Se connecter">
+                                <img src="assets/img/Miaou/ClefCoeur.svg" alt="Clef en forme de cœur">
+                            </a>
+                        </figure>
+                        
+                        <div class="auth-text">
+                            <p>Vous devez vous connecter pour accéder aux jeux et activités</p>
+                            <p>
+                                Vous n'avez pas encore de compte ?
+                                <a href="?route=register">Inscrivez-vous ici</a>
+                            </p>
+                            <p>Vous voulez être tenu informé de nos nouveauté ?
+                                <a href="?route=newsletterSubscribe">Abonnez-vous à notre Newsletter</a>
+                            </p>
+                        </div>
+                    </article>
+            </section>
+        {% endblock %}
 {% endblock %}
    
