formulaires newsletterSubscribe contact ok, page profile OK juste le pb d'affichage dynamique à resoudre, pb des avatar du header resolu

--- a/public/assets/styles/css/pages/coloring.css
+++ b/public/assets/styles/css/pages/coloring.css
@@ -281,6 +281,7 @@
   box-shadow: 6px 6px 0px rgb(20.8962264151, 200.6037735849, 81.4952830189);
 }
 .download-button {
+  border: 1px solid #000000;
   /*display: inline-flex;
   align-items: center;
   gap: 12px;
