--- a/public/assets/styles/sass/style.scss
+++ b/public/assets/styles/sass/style.scss
@@ -13,3 +13,6 @@
 @use "pages/pedagogie";
 @use "pages/coloring";
 @use "pages/dashboard";
+@use "pages/contact";
+@use "pages/newsletterSubscribe";
+@use "pages/profile";
