--- a/views/templates/contactFormUser.html.twig
+++ b/views/templates/contactFormUser.html.twig
@@ -1,4 +1,4 @@
- <form method="POST" action="?route=contact" class ="form-control">
+ <form id="contact-form-container" method="POST" action="?route=contact" class ="form-control">
 
                     <div class='container-contact'>  
 
