--- a/views/templates/dashboard.html.twig
+++ b/views/templates/dashboard.html.twig
@@ -31,7 +31,7 @@
                             <a href="?route=StoriesAdmin" type="button">Histoires</a>
                         </li>
                         <li class="admin-button">
-                            <a href="?route=modifColoriage" type="button">Coloriages</a>
+                            <a href="?route=modifColoring" type="button">Coloriages</a>
                         </li>
                         <li class="admin-button">
                             <a href="?route=modifGame" type="button">Jeux</a>
